# QEMU-Nyx

./: .gitignore  .gitmodules  compile_qemu_nyx.sh  configure  meson.build  os-posix.c  qemu-options.hx
accel/: dummy-cpus.c
accel/kvm/: kvm-all.c
block/: block-backend.c  file-posix.c
chardev/: char-socket.c
dump/: dump.c
hw/char/: serial.c
hw/display/: vga.c
hw/i386/: pc_piix.c  pc_q35.c
hw/i386/kvm/: clock.c  i8254.c
hw/ide/: core.c
hw/intc/: apic_common.c
hw/isa/: lpc_ich9.c
hw/pci/: pci.c
hw/rtc/: mc146818rtc.c
hw/virtio/: virtio.c
include/exec/: ram_addr.h
include/hw/core/: cpu.h
include/hw/pci/: pci.h
include/hw/southbridge/: ich9.h
include/qemu/: bitmap.h  log.h
include/sysemu/: block-backend.h  kvm.h  kvm_int.h
linux-headers/linux/: kvm.h
migration/: savevm.c  vmstate.c
nyx/: debug.h  fast_vm_reload.c  fast_vm_reload.h  fast_vm_reload_sync.c  helpers.c  helpers.h  interface.c  kvm_nested.c  memory_access.h  meson.build  page_cache.h  patcher.c  pt.c  synchronization.c
nyx/hypercall/: hypercall.c
nyx/snapshot/: helper.h
nyx/snapshot/devices/: nyx_device_state.c  nyx_device_state.h  nyx_qio_buffer.c  nyx_qio_buffer.h  state_reallocation.c
nyx/snapshot/memory/backend/: nyx_dirty_ring.c
softmmu/: memory.c  physmem.c  runstate.c  vl.c
util/: bitmap.c  log.c  main-loop.c
