specific_ss.add(files(
    'hypercall/configuration.c',
    'hypercall/debug.c',
    'hypercall/hypercall.c',
    'snapshot/block/block_cow.c',
    'snapshot/block/nyx_block_snapshot.c',
    'snapshot/devices/nyx_device_state.c',
    'snapshot/devices/state_reallocation.c',
    'snapshot/devices/nyx_qio_buffer.c',
    'snapshot/devices/vm_change_state_handlers.c',
    'snapshot/memory/backend/nyx_debug.c',
    'snapshot/memory/backend/nyx_dirty_ring.c',
    'snapshot/memory/backend/nyx_fdl.c',
    'snapshot/memory/block_list.c',
    'snapshot/memory/nyx_fdl_user.c',
    'snapshot/memory/shadow_memory.c',
    'snapshot/misc/nyx_bitmap.c',
    'snapshot/helper.c',
    'state/snapshot_state.c',
    'state/state.c',
    'auxiliary_buffer.c',
    'debug.c',
    'fast_vm_reload_sync.c',
    'fast_vm_reload.c',
    'file_helper.c',
    'helpers.c',
    'interface.c',
    'kvm_nested.c',
    'mem_split.c',
    'memory_access.c',
    'mmh3.c',
    'nested_hypercalls.c',
    'page_cache.c',
    'patcher.c',
    'pt.c',
    'redqueen_patch.c',
    'redqueen_trace.c',
    'redqueen.c',
    'sharedir.c',
    'synchronization.c',
    'trace_dump.c'
))